css/styles.css
@charset "utf-8";
/* CSS Document */

body,td,th,p{
	font-family: Arial, Helvetica, sans-serif;
	font-size: 10pt;
	color: #333;
	line-height: 1.5;
}
body {
	background-color: #fdfdfd;
	margin: 0;
	position:relative;
}
ul, li {
	font-family: Arial, Helvetica, sans-serif;
	font-size: 10pt;
	color: #333;
}
a {
	color: orange;
	text-decoration: none;
}
a:hover, a:focus {
	color: #3397db;
	text-decoration: none;
}
a img{
	border: none 0px #fff;
}
h1, h2, h3, h4, h5, h6 {
  font-family: Arial, Helvetica, sans-serif;
  margin: 0 0 20px;
}
article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
	display: block;
}
#maincontent {
  background-color: #f3f3f3;
  min-height: 100%;
}
#footer {
  background-color: #444;
  color: #aaa;
  font-size: 8pt;
  letter-spacing: 1px;
  padding: 25px 0 25px 0;
  text-align: center;
  text-transform: uppercase;
}
#footer p {
	padding: 0px 30px;
}
/* ====================== Navigation ====================== */
nav {
  width: 100%;
  height: 80px;
  background-color: #252831;
  text-align:center;
	display: flex;
	align-items: center;
}
nav h1 {
  margin: auto;
}
nav h1 a {
  color: #fff;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 10px;
  text-transform: uppercase;
}
#breadcrumb {
    padding: 10px 40px 16px;
    list-style: none;
    background-color: #eee;
    font-size: 17px;
    margin: 0;
}

/* Display list items side by side */
#breadcrumb li {
    display: inline;
}

/* Add a slash symbol (/) before/behind each list item */
#breadcrumb li+li:before {
    padding: 8px;
    color: black;
    content: "/\00a0";
}

/* Add a color to all links inside the list */
#breadcrumb li a {
    color: #0275d8;
    text-decoration: none;
}

/* Add a color on mouse-over */
#breadcrumb li a:hover {
    color: #01447e;
    text-decoration: underline;
}

/* ====================== Skip Link ====================== */

header .skip-link {
  position: absolute;
  top: -40px;
  left: 0;
  background: #ffa500;
  color: white;
  padding: 8px;
  z-index: 100;
  text-transform: uppercase;
}

header .skip-link:focus {
  top: 0;
}

/* ====================== Map ====================== */

#map {
  height: 400px;
  width: 100%;
  background-color: #ccc;
}

/* ====================== Restaurant Filtering ====================== */

.filter-options {
  width: 100%;
  height: 100%;
  background-color: #3397DB;
  align-items: center;
  display: flex;
  flex-direction: column;
}
.filter-options h2 {
  color: white;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1;
	padding-top: 15px;
  margin: 0 0 20px 0;
}
.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  font-family: Arial,sans-serif;
  font-size: 11pt;
  height: 35px;
  letter-spacing: 0;
  margin: 0 0 10px 0;
  padding: 0 10px;
  width: 200px;
}

/* ====================== Restaurant Listing ====================== */
#restaurants-list {
  background-color: #f3f3f3;
  list-style: outside none none;
  margin: 0;
  padding: 20px 2%;
  text-align: center;
}
#restaurants-list li {
  background-color: #fff;
  border: 2px solid #ccc;
  font-family: Arial,sans-serif;
  margin: 15px 0;
  min-height: 380px;
  padding: 0 4% 10px 4%;
  text-align: left;
  width: 100%;
  min-width: 280px;
  max-width: 400px;
}
#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
	max-width: 100%;
  min-width: 100%;
}
#restaurants-list li h1 {
  color: #f18200;
  font-family: Arial,sans-serif;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 20px 0 10px;
  text-transform: uppercase;
}
#restaurants-list p {
  margin: 0;
  font-size: 11pt;
}
#restaurants-list li a {
  background-color: orange;
  border-bottom: 3px solid #eee;
  color: #fff;
  display: inline-block;
  font-size: 10pt;
  margin: 15px 0 0;
  padding: 8px 30px 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
}

/* ====================== Restaurant Details ====================== */

.inside header {
  width: 100%;
  z-index: 1000;
}
.inside #map-container {
  background: blue none repeat scroll 0 0;
  height: 100vh;
	margin: auto;
	width: 100%;
}
.inside #map {
  background-color: #ccc;
  height: 100%;
  width: 100%;
}
.inside #footer {
  width: 100%;
}
#restaurant-name {
  color: #f18200;
	text-align: center;
  font-family: Arial,sans-serif;
  font-size: 20pt;
  font-weight: 200;
  letter-spacing: 0;
  margin: 15px 0 30px;
  text-transform: uppercase;
  line-height: 1.1;
}
#restaurant-img {
	width: 90%;
	border-radius: 15px 0 0 0;
}
#restaurant-address {
  font-size: 12pt;
  margin: 10px 0px;
}
#restaurant-cuisine {
  background-color: #333;
  color: #ddd;
  font-size: 12pt;
  font-weight: 300;
  letter-spacing: 10px;
  margin: 0 0 20px;
  padding: 2px 0;
	border-radius: 0 0 15px 0;
  text-align: center;
  text-transform: uppercase;
	width: 90%;
}
#reviews, #restaurant-content{
  width: 50%;
}
#restaurant-container, #reviews-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
	padding: 15px 3%;
  max-width: 560px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
#reviews-container {
  padding: 30px 40px 80px;
}
#reviews-container h2 {
  color: #f58500;
  font-size: 24pt;
  font-weight: 300;
  letter-spacing: -1px;
  padding-bottom: 1pt;
}
#reviews-list {
  margin: 0;
  padding: 0;
}
#reviews-list li {
	background-color: #fff;
	border: 2px solid #f3f3f3;
	display: block;
	list-style-type: none;
	margin: 0 0 30px;
	overflow: hidden;
	padding: 0 20px 20px;
	position: relative;
}
#reviews-list li p {
  margin: 0 0 10px;
}
#restaurant-hours td {
  color: #666;
}

/* Adapt to screen */

/* ====================== Media Queries: 480px; ====================== */
@media screen and (min-width: 480px) {
  .filter-options {
    display: block;
  }
  #neighborhoods-select {
    margin: 0 20px 10px 0;
  }
}

/* ====================== Media Queries: 600px; ====================== */
@media screen and (min-width: 600px) {
  #restaurants-list {
    padding: 20px 30px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
  }
  #restaurants-list li {
    padding: 0 30px 10px 30px;
    margin: 15px;
  }
  #restaurant-container, #reviews-container {
    padding: 20px 11px;
    margin: auto;
  }
}

/* ====================== Media Queries: 1150px; ====================== */
@media screen and (min-width: 1150px) {
  #reviews-container {
    max-width: 100%;
  }
  #reviews-list {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    flex-wrap: wrap;
  }
}

/* ====================== Media Queries: 1400px; ====================== */
@media screen and (min-width: 1400px) {
  .filter-options {
    padding: 10px 30px 0 30px;
  }
}

